--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
     "sourceMap": true,
     "declaration": false,
     "allowJs":true,
+    "resolveJsonModule": true,
     "experimentalDecorators": true,
     "moduleResolution": "node",
     "importHelpers": true,
