--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
     "@aws-amplify/ui-angular": "^5.0.12",
+    "@aws-sdk/client-cognito-identity": "^3.556.0",
+    "@aws-sdk/client-s3": "^3.556.0",
+    "@aws-sdk/credential-provider-cognito-identity": "^3.556.0",
+    "@aws-sdk/lib-storage": "^3.556.0",
     "aws-amplify": "^6.0.28",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
