added more dependencies for commonjs

--- a/angular.json
+++ b/angular.json
@@ -33,12 +33,20 @@
             "allowedCommonJsDependencies":[
               "lodash",
               "qrcode",
+              "bowser",
               "lodash/kebabCase.js",
               "lodash/pickBy.js",
               "lodash/merge.js",
               "style-dictionary/lib/utils/deepExtend.js",
               "style-dictionary/lib/utils/flattenProperties.js",
-              "style-dictionary/lib/utils/references/usesReference.js"
+              "style-dictionary/lib/utils/references/usesReference.js",
+              "@aws-crypto/sha256-browser",
+              "@aws-crypto/sha256-js",
+              "@aws-crypto/sha1-browser",
+              "@aws-crypto/crc32c",
+              "@aws-crypto/crc32",
+              "fast-xml-parser"
+
 
             ]
           },
@@ -48,7 +56,7 @@
                 {
                   "type": "initial",
                   "maximumWarning": "2mb",
-                  "maximumError": "1mb"
+                  "maximumError": "2mb"
                 },
                 {
                   "type": "anyComponentStyle",
