--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "@aws-sdk/credential-provider-cognito-identity": "^3.556.0",
     "@aws-sdk/lib-storage": "^3.556.0",
     "aws-amplify": "^6.0.28",
+    "bootstrap": "^5.3.3",
+    "braces": ">=3.0.3",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.14.3"
@@ -34,6 +36,7 @@
     "@angular/compiler-cli": "^17.3.0",
     "@types/jasmine": "~5.1.0",
     "autoprefixer": "^10.4.19",
+    "braces": ">=3.0.3",
     "jasmine-core": "~5.1.0",
     "karma": "~6.4.0",
     "karma-chrome-launcher": "~3.2.0",
