--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "@angular/platform-browser": "^17.3.0",
     "@angular/platform-browser-dynamic": "^17.3.0",
     "@angular/router": "^17.3.0",
-    "@aws-amplify/ui-angular": "^5.0.12",
+    "@aws-amplify/storage": "^6.5.2",
+    "@aws-amplify/ui-angular": "^5.0.17",
     "@aws-sdk/client-cognito-identity": "^3.556.0",
     "@aws-sdk/client-s3": "^3.556.0",
     "@aws-sdk/credential-provider-cognito-identity": "^3.556.0",
