--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -3,6 +3,21 @@
   "version": "0.2.0",
   "configurations": [
     {
+      "type": "aws-sam",
+      "request": "direct-invoke",
+      "name": "softcheck-sbom-lambda:lambda_function.lambda_handler (python3.11)",
+      "invokeTarget": {
+        "target": "code",
+        "projectRoot": "${workspaceFolder}/lambda/softcheck-sbom-lambda",
+        "lambdaHandler": "lambda_function.lambda_handler"
+      },
+      "lambda": {
+        "runtime": "python3.11",
+        "payload": {},
+        "environmentVariables": {}
+      }
+    },
+    {
       "name": "ng serve",
       "type": "chrome",
       "request": "launch",
