--- a/.graphqlconfig.yml
+++ b/.graphqlconfig.yml
@@ -8,5 +8,8 @@ projects:
     extensions:
       amplify:
         codeGenTarget: typescript
-        generatedFileName: src/API.ts
+        generatedFileName: src/GraphqlAPI.ts
         docsFilePath: src/graphql
+extensions:
+  amplify:
+    version: 3
