--- a/angular.json
+++ b/angular.json
@@ -13,7 +13,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:application",
           "options": {
-            "outputPath": "dist/finchain-web-app",
+            "outputPath": "dist/softcheck-app",
             "index": "src/index.html",
             "browser": "src/main.ts",
             "polyfills": [
